              unsolved problems in 7 Tesla images with strong inhomogeneities.


------------------------------------------------------------------------
r1030 | dahnke | 2016-10-05 17:37:43 +0200 (Mi, 05 Okt 2016) | 7 lines

Changed paths:
M       CHANGES.txt
A       cat_vol_iscaling.m

(1) New:   Addend forgotten "cat_vol_iscaling".  


------------------------------------------------------------------------
r1031 | gaser | 2016-10-11 10:39:54 +0200 (Di, 11 Okt 2016) | 12 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_conf_stools.m
M       cat_surf_results.m
M       html/cat.html
M       html/cat_FAQ.html

(1) Changed: Some changes to cat_surf_results to better deal with thresholds.
(2) Fixed: estroi was not defined in expert mode in cat_conf_stools.m and is 
    currently commented out and not used.

------------------------------------------------------------------------
r1032 | gaser | 2016-10-14 01:54:19 +0200 (Fr, 14 Okt 2016) | 6 lines

Changed paths:
M       CHANGES.txt
M       cat_surf_results.m

Changed: Added optional bottom view to cat_surf_results.m.

------------------------------------------------------------------------
r1033 | gaser | 2016-10-14 23:23:17 +0200 (Fr, 14 Okt 2016) | 10 lines

Changed paths:
M       CHANGES.txt
M       cat_surf_results.m
 M      cat_vol_iscaling.m
 M      html/images/Gyral_blurring.png
 M      html/images/Problems_in_7_Tesla.png
 M      html/images/Sulcal_blurring.png

Changed: Added option to rotate views in cat_surf_results.m.

------------------------------------------------------------------------

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_conf_stools.m
M       cat_surf_vol2surf.m
A       compile_standalone.txt
M       html/cat.html

Fixed: Always use "gifti" as filter for surface data in cat_conf_stools.m.
------------------------------------------------------------------------
r1034 | gaser | 2016-10-17 11:37:18